# COS214-Project

./: COS 214 Project Doc.docx  COS 214 Project.docx  README.md
Code/: Ambush.cpp  Ambush.h  ArmySupplies.h  Assassinate.cpp  Assassinate.h  Bannerman.cpp  Bannerman.h  BattleField.cpp  BattleField.h  CMakeLists.txt  Commander.cpp  Commander.h  ConIterator.cpp  ConIterator.h  Conditions.cpp  Conditions.h  Economy.cpp  Economy.h  Factory.cpp  Factory.h  FailedState.cpp  FailedState.h  FoodFac.cpp  FoodFac.h  FoodSupp.cpp  FoodSupp.h  FoodWagon.cpp  FoodWagon.h  HealthyState.cpp  HealthyState.h  Historian.cpp  Historian.h  History.cpp  History.h  HistoryBook.cpp  HistoryBook.h  Iterator.h  Kingdom.cpp  Kingdom.h  Location.cpp  (+40 more)
Code/src/: Ambush.cpp  ArmySupplies.h  Bannerman.cpp  Commander.cpp  HealthyState.cpp  Location.cpp  MasterOfCoin.cpp  MedicalFac.h  Strategy.cpp  SupplyWagon.h  WeaponWagon.h  WeaponsFac.cpp
Code/tst/: CommanderTest.cpp  DecoratorTest.cpp  WagonsTest.cpp  main.cpp
Doxygen/html/: _ambush_8h_source.html  _army_supplies_8h_source.html  _assassinate_8h_source.html  _bannerman_8h_source.html  _battle_field_8h_source.html  _class_8h_source.html  (+218 more)
System/: Ambush.cpp  Assassinate.cpp  Assassinate.h  Bannerman.h  BattleField.cpp  BattleField.h  CMakeLists.txt  Conditions.h  Doxyfile  FailedState.cpp  FailedState.h  FoodFac.cpp  FoodFac.h  FoodSupp.cpp  FoodSupp.h  FoodWagon.h  Historian.h  History.h  HistoryBook.cpp  MedicalFac.h  MedicalSupp.h  MedicalWagon.cpp  MedicalWagon.h  Siege.cpp  State.cpp  SupplyWagon.h  Troop.h  UnstableState.h  WarTheatre.cpp  WeaponSupp.h  Weather.cpp  Weather.h  main.cpp  main.out  makefile  sendRaven.cpp  sendRaven.h
(+226 files in other folders)
