cmake_minimum_required(VERSION 3.23)
project(Code)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Code
        Ambush.cpp
        Ambush.h
        ArmySupplies.h
        Assassinate.cpp
        Assassinate.h
        Bannerman.cpp
        Bannerman.h
        BattleField.cpp
        BattleField.h
        Class.h
        Commander.cpp
        Commander.h
        Conditions.cpp
        Conditions.h
        ConIterator.cpp
        ConIterator.h
        Economy.cpp
        Economy.h
        Factory.h
        FailedState.cpp
        FailedState.h
        FoodFac.h
        FoodSupp.h
        FoodWagon.cpp
        FoodWagon.h
        HealthyState.cpp
        HealthyState.h
        Historian.cpp
        Historian.h
        History.cpp
        History.h
        HistoryBook.cpp
        HistoryBook.h
        Iterator.h
        Kingdom.cpp
        Kingdom.h
        Location.cpp
        Location.h
        MasterOfCoin.cpp
        MasterOfCoin.h
        MedicalFac.h
        MedicalSupp.h
        MedicalWagon.cpp
        MedicalWagon.h
        Raven.h
        sendRaven.cpp
        sendRaven.h
        Siege.cpp
        Siege.h
        State.cpp
        State.h
        Strategy.cpp
        Strategy.h
        SupplyWagon.h
        Topology.cpp
        Topology.h
        Treasury.h
        Troop.cpp
        Troop.h
        UnstableState.cpp
        UnstableState.h
        WarIndicators.h
        WarTheatre.cpp
        WarTheatre.h
        WeaponsFac.h
        WeaponSupp.h
        WeaponWagon.cpp
        WeaponWagon.h
        Weather.cpp
        Weather.h)